Fixing buttons possiotioning on tablet

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -348,12 +348,12 @@ footer {
     }
 
     .rules-btn {   
-        top: 40%;    
+        top: 45%;    
         left: 34%;
     }
     
     .play-btn {
-        top: 40%;
+        top: 45%;
         left: 53%;
     }
 
